# um_oic

./: .dockerignore  .env.example  .env.tls  COCKTAILS.md  Caddyfile  Cargo.toml  DIST  Makefile  README.md  RULEZ  TODO  auth-service.pid  build.sh  design-system-dark-mode.css  docker-compose.tls.yml  docker-compose.yml  nginx.conf.example  run-tests.sh  services.sh  start-local.sh
.cargo/: config.toml
admin-app/: ARCHITECTURE.md  UI_DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin-app/src/: App.vue  style.css
admin-service/: Cargo.toml  Dockerfile  config.toml
admin-service/certs/: admin-cert.pem  admin-key.pem
admin-service/src/: config.rs  jwt.rs  logging.rs  main.rs  models.rs  password.rs  storage.rs  tls.rs
admin-service/src/handlers/: audit.rs  auth.rs  claims.rs  clients.rs  groups.rs  health.rs  mod.rs  organizations.rs  roles.rs  sessions.rs  stats.rs  system.rs  users.rs
admin-service/src/middleware/: auth.rs
auth-ops/: Cargo.toml  Dockerfile
auth-ops/backups/backup-1761858847/: manifest.json  users.json
auth-ops/data/: claims_registry.json  users.json
auth-ops/src/: backup.rs  main.rs  models.rs  password.rs  storage.rs
auth-service/: Cargo-tls.toml  Cargo.toml  Dockerfile  Dockerfile.tls  auth.pid  config.toml
auth-service/certs/: cert.pem  key.pem
auth-service/src/: config.rs  jwt.rs  logging.rs  main-tls.rs  main.rs  main_tls.rs  models.rs  password.rs  storage.rs  storage_org.rs  tls.rs
certs/: auth-cert.pem  auth-key.pem  cert.pem  dev-cert.pem  dev-key.pem  key.pem
data/: claims.json  clients.json  orgs.json  roles.json  users.json
design-system/: README.md  package.json  sample.fragment.html  tsconfig.json
design-system/docs/: index.md
design-system/src/: index.spec.ts
design-system/themes/: dark.css
docker/: Caddyfile  caddy-acme.yml  docker-run.sh  native-tls.yml  nginx-certbot.yml  traefik-acme.yml  traefik.yml
docker/compose/: docker-compose.private.yml  (+1 more)
docs/: ADMIN_API_EXTENSIONS.md  ARCHITECTURE.md  CLAUDE.md  SERVICES.md  TESTING.md  tls-comparison.md
manager-service/: requirements.txt
systemd/: README.md  admin-service.service  auth-service.service  install.sh  um-oic-admin.service  um-oic-auth.service
test/: .gitignore  Makefile  README.md  api-comprehensive-test.sh  api-load-test.sh  api-validation-test-broken.sh  api-validation-test.sh  create_test_password.rs  debug-test.sh  docker-compose.test.yml  run-tests.sh  simple-validation.sh  test-api.sh  test-cli.sh  test-docker.sh  test-tls.sh  test_tls.rs
(+305 files in other folders)
