[package]
name = "admin-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Crypto (für JWT verification)
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }

# Utilities
uuid = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

# System
libc = { workspace = true }