[package]
name = "auth-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Crypto (for password hashing)
argon2 = { workspace = true }
sha2 = { workspace = true }

# Utilities
uuid = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# System
libc = { workspace = true }